# Muni-Disclosure-Intelligence

./: .env.example  .gitignore  DESIGN.md  README.md  docker-compose.yml  pyproject.toml
scripts/: batch_extract.py  eval.py  propose_labels.py
src/muni/: cli.py  config.py
src/muni/extract/: go_bond.py  llm.py  normalize.py  provenance.py  retrieval.py  schema.py
src/muni/ingest/: pdf.py  uploads.py
src/muni/store/: db.py  models.py
tests/: test_extraction.py  test_ingest.py  test_llm_compat.py  test_normalize.py  test_provenance.py  test_retrieval.py  test_schema.py
tests/gold/labels/: comal-isd-tx-2024.yaml  connecticut-go-2024ab.yaml  evanston-go-2024.yaml  illinois-go-dec2023abc.yaml  illinois-go-may2024ab.yaml  illinois-go-oct2024abc.yaml  maryland-go-2024-pos.yaml  maryland-go-2024.yaml  nashville-go-2026abc.yaml  nashville-go-2026d.yaml  nyc-go-2024a.yaml  nyc-go-2024b.yaml  nyc-go-2025ab.yaml  nyc-go-2026e.yaml  nyecounty-nv-sd-2025.yaml  pennsylvania-go-2026.yaml  philadelphia-go-2025abc.yaml  rockcastle-ky-2024.yaml  roseville-mn-isd623-2024a.yaml  saukrapids-mn-isd47-2024a.yaml  sf-go-2025f.yaml  tennessee-go-2021.yaml  wabasha-mn-isd811-2024a.yaml
