[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "muni-intel"
version = "0.1.0"
description = "Muni Disclosure Intelligence: grounded extraction and monitoring for municipal bond disclosures"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.60",
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "SQLAlchemy>=2.0",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "rapidfuzz>=3.6",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
muni = "muni.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
